--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 "
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="http://fonts.cdnfonts.com/css/gotham" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;800&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
     <script src="main.js"></script>
