--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 "
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Antonio:wght@700&family=Montserrat:wght@700;900&family=Raleway&display=swap"
+      rel="stylesheet"
+    />
 
     <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
     <script src="main.js"></script>
@@ -46,17 +49,27 @@
               style="flex: 0"
             />
           </div>
-          <h1 style="margin-left: 10px; font-size: 30px">
+          <h1 style="margin-left: 10px; font-size: 50px">
             TECHNOLOGICAL INSTITUTE OF THE PHILIPPINES
           </h1>
         </div>
       </div>
-     
+
       <div class="parent" id="parent">
         <div class="main-1">
           <div class="container a-container" id="a-container">
             <form class="form" id="a-form" method="" action="">
-              <h2 class="form_title title">Create Account</h2>
+              <h2
+                style="
+                  font-family: 'Montserrat', sans-serif;
+                  font-weight: 700;
+                  font-size: 31px;
+                  color: #4a4848;
+                "
+                class="form_title title"
+              >
+                CREATE ACCOUNT
+              </h2>
               <div class="form__icons">
                 <img
                   class="form__icon"
@@ -84,7 +97,9 @@
                 class="form__input"
                 type="password"
                 placeholder="Password"
-              /><button class="form__button button submit">SIGN UP</button>
+              /><button class="switch__button button switch-btn">
+                SIGN UP
+              </button>
             </form>
           </div>
           <div class="container b-container" id="b-container">
@@ -120,7 +135,17 @@
             <div class="switch__circle"></div>
             <div class="switch__circle switch__circle--t"></div>
             <div class="switch__container" id="switch-c1">
-              <h2 class="switch__title title">Welcome Back !</h2>
+              <h2
+                style="
+                  font-family: 'Montserrat', sans-serif;
+                  font-weight: 700;
+                  font-size: 31px;
+                  color: #4a4848;
+                "
+                class="switch__title title"
+              >
+                WELCOME BACK!
+              </h2>
               <p class="switch__description description">
                 To keep connected with us please login with your personal info
               </p>
