--- a/index.html
+++ b/index.html
@@ -49,7 +49,14 @@
               style="flex: 0"
             />
           </div>
-          <h1 style="margin-left: 10px; font-size: 50px">
+          <h1
+            style="
+              margin-left: 10px;
+              font-size: 50px;
+              font-family: 'Antonio', sans-serif;
+              font-weight: 700;
+            "
+          >
             TECHNOLOGICAL INSTITUTE OF THE PHILIPPINES
           </h1>
         </div>
